# Cache-SimulatorECE563

./: CMakeLists.txt  Makefile  sim.c
include/: Cache.h  CacheOperation.h  LinkedList.h  Prefetch.h  Queue.h  sim.h
src/: Cache.c  CacheOperation.c  LinkedList.c  Prefetch.c  Queue.c
